List gap and setcion height fix

--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ html {
     .full_container {
         display: flex;
         flex-direction: column;
-        border: 1px solid white;
     }
     
     .setcion {
@@ -145,18 +144,18 @@ html {
 
     .main-container {
         display: flex;
-        height: 51vh;
+        height: 59vh;
     }
 
     .list {
         display: flex;
         flex-direction: column;
-        gap: 1.9rem;
+        gap: 1.5rem;
     }
 
     .setcion {
         width: 21rem;
-        height: 60%;
+        height: 80%;
         display: flex;
         text-align: center;
     }
@@ -170,8 +169,8 @@ html {
     }
 
     #title {
-        max-width: 80%;
+        max-width: 69%;
         align-self: center;
-        font-size: 28px;
+        font-size: 24px;
     }
 }
